--- a/spark_studio_output_FIXED5.html
+++ b/spark_studio_output_FIXED5.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DDOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
@@ -34,7 +34,7 @@
         </div>
         <nav class="hidden md:flex items-center gap-8">
             <a class="text-sm font-medium text-slate-600 dark:text-slate-400 hover:text-primary transition-colors" href="dashboard.html">Dashboard</a>
-            <a class="text-sm font-bold text-primary border-b-2 border-primary py-5" href="spark_studio_final4.html">Campaigns</a>
+            <a class="text-sm font-bold text-primary border-b-2 border-primary py-5" href="index.html">Campaigns</a>
             <a class="text-sm font-medium text-slate-600 dark:text-slate-400 hover:text-primary transition-colors" href="history.html">History</a>
         </nav>
         <div class="flex items-center gap-4">
@@ -51,7 +51,7 @@
                 <h3 class="font-bold mb-6 flex items-center justify-between">Summary <span class="material-symbols-outlined text-slate-400 text-lg">info</span></h3>
                 <div id="summary-content" class="space-y-5 text-sm">
                     </div>
-                <button onclick="window.location.href='spark_studio_final4.html'" class="w-full mt-8 py-2.5 bg-slate-100 dark:bg-slate-800 rounded-lg font-bold text-sm hover:bg-slate-200 transition-colors flex items-center justify-center gap-2">
+                <button onclick="window.location.href='index.html'" class="w-full mt-8 py-2.5 bg-slate-100 dark:bg-slate-800 rounded-lg font-bold text-sm hover:bg-slate-200 transition-colors flex items-center justify-center gap-2">
                     <span class="material-symbols-outlined text-lg">edit</span> Edit Campaign
                 </button>
             </div>
@@ -158,7 +158,7 @@
 
     document.getElementById('regenerate-btn').onclick = () => {
         if(confirm('Regenerate using original settings?')) {
-            window.location.href = 'spark_studio_final4.html?trigger=true';
+            window.location.href = 'index.html?trigger=true';
         }
     };
 </script>
